--- a/es-1-analysis/pom.xml
+++ b/es-1-analysis/pom.xml
@@ -49,7 +49,7 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.3.11</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.tapacross.sns.analyzer</groupId>
