--- a/my-lucene-analyzer-4/pom.xml
+++ b/my-lucene-analyzer-4/pom.xml
@@ -38,7 +38,7 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.3.11</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<!-- es1.4와 groovy2.3.10 사용시 com.vividsolutions.jts.geom.Coordinate class not found error 발생 -->
 		<!-- 아래와  같은 라이브러리 추가해야함 -->
