--- a/es-1-search/pom.xml
+++ b/es-1-search/pom.xml
@@ -159,13 +159,13 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.0.2</version>
 		</dependency>
-		<!-- 
 		<dependency>
 			<groupId>com.oracle.ojdbc</groupId>
 			<artifactId>odjbc5_g</artifactId>
 			<version>11.2.0.4</version>
+			<systemPath>${project.basedir}/lib/odjbc5_g-11.2.0.4.jar</systemPath>
+			<scope>system</scope>
 		</dependency>
-		 -->
 		<dependency>
 			<groupId>com.tapacross.sns.analyzer</groupId>
 			<artifactId>my-lucene-analyzer-4</artifactId>
