--- a/es-1-analysis/pom.xml
+++ b/es-1-analysis/pom.xml
@@ -14,6 +14,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.5</java.version>
 		<es.version>1.0.0</es.version>
+		<lucene.version>4.6.1</lucene.version>
 		<springframework.version>4.0.1.RELEASE</springframework.version>
 	</properties>
 
@@ -57,6 +58,12 @@
 			<groupId>com.tapacross.sns.analyzer</groupId>
 			<artifactId>my-lucene-analyzer-4</artifactId>
 			<version>4.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>${lucene.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
