--- a/es-1-search/pom.xml
+++ b/es-1-search/pom.xml
@@ -56,6 +56,11 @@
 	</profiles>
 
 	<dependencies>
+	<dependency>
+ <groupId>org.apache.httpcomponents</groupId>
+ <artifactId>httpclient</artifactId>
+ <version>4.5</version>
+</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
