--- a/es-1-analysis/pom.xml
+++ b/es-1-analysis/pom.xml
@@ -13,8 +13,8 @@
   <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.5</java.version>
-		<es.version>1.0.0</es.version>
-		<lucene.version>4.6.1</lucene.version>
+		<es.version>1.4.0</es.version>
+		<lucene.version>4.10.2</lucene.version>
 		<springframework.version>4.0.1.RELEASE</springframework.version>
 	</properties>
 
@@ -42,12 +42,29 @@
 			<version>${es.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- es1.4 사용시 groovy2.3.2가 로드되기 때문에 디펜던시 제외해야함 -->
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>2.3.11</version>
-			<scope>compile</scope>
+			<version>2.3.2</version>
+			<scope>provided</scope>
 		</dependency>
+		<!-- es1.4와 groovy2.3.10 사용시 com.vividsolutions.jts.geom.Coordinate class not found error 발생 -->
+		<!-- 아래와  같은 라이브러리 추가해야함 -->
+		<!-- https://github.com/elastic/elasticsearch/issues/9891 -->
+		<!-- 
+		<dependency>
+			<groupId>com.vividsolutions</groupId>
+			<artifactId>jts</artifactId>
+			<version>1.13</version>
+			<exclusions>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		 -->
 		<dependency>
 			<groupId>com.tapacross.sns.analyzer</groupId>
 			<artifactId>my-lucene-analyzer-4</artifactId>
