--- a/es-1-search/pom.xml
+++ b/es-1-search/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.5</java.version>
-		<es.version>1.3.0</es.version>
+		<es.version>1.4.0</es.version>
 		<springframework.version>4.0.1.RELEASE</springframework.version>
 	</properties>
 
@@ -76,9 +76,10 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>2.3.11</version>
+			<version>2.3.2</version>
+			<scope>test</scope>
 		</dependency>
-		<!-- es1.4와 groovy2.3.10 사용시 com.vividsolutions.jts.geom.Coordinate class not found error 발생 -->
+		<!-- es1.4와 groovy2.3.10~ 사용시 com.vividsolutions.jts.geom.Coordinate class not found error 발생 -->
 		<!-- 아래와  같은 라이브러리 추가해야함 -->
 		<!-- https://github.com/elastic/elasticsearch/issues/9891 -->
 		<dependency>
