--- a/my-lucene-analyzer-5/pom.xml
+++ b/my-lucene-analyzer-5/pom.xml
@@ -3,22 +3,26 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.tapacross.sns.analyzer</groupId>
-	<artifactId>my-lucene-analyzer-5-2-0</artifactId>
-	<version>0.1</version>
+	<artifactId>my-lucene-analyzer-5</artifactId>
+	<version>5.0.0</version>
 	<packaging>jar</packaging>
 
-	<name>my-lucene-analyzer-5-2-0</name>
+	<name>my-lucene-analyzer-5</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<lucene.version>5.0.0</lucene.version>
+		<lucene.version>5.2.1</lucene.version>
 	</properties>
 
 	<repositories>
 		<repository>
 			<id>jboss-3rd-party-releases</id>
 			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
+		</repository>
+		<repository>
+			<id>tapacross</id>
+			<url>http://121.254.177.182:8081/nexus/content/repositories/tapacross</url>
 		</repository>
 	</repositories>
 
@@ -29,32 +33,31 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- 5.0.0~5.5.0 정상 테스트 -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
 			<version>${lucene.version}</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
 			<version>${lucene.version}</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
-		<!-- es1.4와 groovy2.3.10 사용시 com.vividsolutions.jts.geom.Coordinate class not found error 발생 -->
-		<!-- 아래와  같은 라이브러리 추가해야함 -->
-		<!-- https://github.com/elastic/elasticsearch/issues/9891 -->
 		<dependency>
-			<groupId>com.vividsolutions</groupId>
-			<artifactId>jts</artifactId>
-			<version>1.13</version>
-			<exclusions>
-				<exclusion>
-					<groupId>xerces</groupId>
-					<artifactId>xercesImpl</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>com.tapacross</groupId>
+			<artifactId>sma2-core</artifactId>
+			<version>2.0</version>
+			<systemPath>${project.basedir}/lib/sma2-core-2.0.jar</systemPath>
+			<scope>system</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.muhayu</groupId>
+			<artifactId>ise-client</artifactId>
+			<version>4.0</version>
+			<systemPath>${project.basedir}/lib/ise-client-4.0.jar</systemPath>
+			<scope>system</scope>
 		</dependency>
 	</dependencies>
 	<build>
@@ -68,7 +71,7 @@
 				</excludes>
 			</resource>
 			<resource>
-				<directory>src/main/resources/${environment}</directory>
+				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
 		<pluginManagement>
