--- a/es-2-analysis/.project
+++ b/es-2-analysis/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>es-2-0-0-analysis</name>
+	<name>es-2-analysis</name>
 	<comment></comment>
 	<projects>
 	</projects>
