--- a/hadoop-study/pom.xml
+++ b/hadoop-study/pom.xml
@@ -42,6 +42,20 @@
 		    <artifactId>hadoop-core</artifactId>
 		    <version>1.0.1</version>
 		</dependency>
+		<!-- 
+		<dependency>
+		    <groupId>org.apache.hadoop</groupId>
+		    <artifactId>hadoop-test</artifactId>
+		    <version>1.0.1</version>
+		</dependency>
+		 -->
+		<!-- 
+		<dependency>
+		    <groupId>org.apache.hadoop</groupId>
+		    <artifactId>hadoop-tools</artifactId>
+		    <version>1.0.1</version>
+		</dependency>
+		 -->
 		<dependency>
 			<groupId>org.apache.mrunit</groupId>
 			<artifactId>mrunit</artifactId>
@@ -49,28 +63,18 @@
 			<classifier>hadoop1</classifier>
 			<scope>test</scope>
 		</dependency>
-		<!-- dependency by scp deploy -->
-		<dependency>
-			<groupId>org.apache.ant</groupId>
-			<artifactId>ant-jsch</artifactId>
-			<version>1.9.1</version>
-		</dependency>
-		<!-- dependency by scp deploy -->
-		<dependency>
-			<groupId>com.jcraft</groupId>
-			<artifactId>jsch</artifactId>
-			<version>0.1.50</version>
-		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 			<version>${jedis.version}</version>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>com.yahoo.oozie</groupId>
 			<artifactId>oozie</artifactId>
