--- a/groovy-2-5-study/pom.xml
+++ b/groovy-2-5-study/pom.xml
@@ -24,8 +24,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-all</artifactId>
-			<version>2.5.8</version>
+			<artifactId>groovy</artifactId>
+			<version>[2.5.0,2.5.8]</version>
 		</dependency>
 	</dependencies>
 </project>
