--- a/groovy2-4-study/pom.xml
+++ b/groovy2-4-study/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>2.4.17</version>
+			<version>[2.4.13,2.4.17]</version>
 		</dependency>
 	</dependencies>
 </project>
