--- a/spark-study/pom.xml
+++ b/spark-study/pom.xml
@@ -14,7 +14,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<hadoop.version>2.2.0</hadoop.version>
 		<java.version>1.8</java.version>
-  		<scala-version>2.10.0</scala-version>
+  		<scala.version>2.10.0</scala.version>
+  		<spark.version>1.0.0</spark.version>
+  		<!--https://mvnrepository.com/artifact/org.apache.spark/spark-core-->
 	</properties>
 
 	<dependencies>
@@ -27,19 +29,19 @@
 		<dependency>
 		    <groupId>org.scala-lang</groupId>
 		    <artifactId>scala-library</artifactId>
-		    <version>2.10.0</version>
+		    <version>${scala.version}</version>
 		    <scope>provided</scope>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.spark</groupId>
 		    <artifactId>spark-core_2.10</artifactId>
-		    <version>1.0.0</version>
+		    <version>${spark.version}</version>
 		    <scope>provided</scope>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.spark</groupId>
 		    <artifactId>spark-streaming_2.10</artifactId>
-		    <version>1.0.0</version>
+		    <version>${spark.version}</version>
 		    <scope>provided</scope>
 		</dependency>
 		
@@ -54,20 +56,6 @@
 					<groupId>jdk.tools</groupId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<!-- dependency by scp deploy -->
-		<dependency>
-			<groupId>org.apache.ant</groupId>
-			<artifactId>ant-jsch</artifactId>
-			<version>1.9.0</version>
-			<scope>compile</scope>
-		</dependency>
-		<!-- dependency by scp deploy -->
-		<dependency>
-			<groupId>com.jcraft</groupId>
-			<artifactId>jsch</artifactId>
-			<version>0.1.50</version>
-			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
