--- a/groovy-study/pom.xml
+++ b/groovy-study/pom.xml
@@ -23,7 +23,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-all</artifactId>
+			<artifactId>groovy</artifactId>
 			<version>2.3.10</version>
 		</dependency>
 	</dependencies>
