--- a/gspark-study/pom.xml
+++ b/gspark-study/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>1.8</java.version>
   		<scala.version>2.10.0</scala.version>
   		<spark.version>1.3.0</spark.version>
+  		<groovy.version>3.0.0-beta-3</groovy.version>
 	</properties>
 
 	<dependencies>
@@ -29,7 +30,7 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>3.0.0-beta-3</version>
+			<version>${groovy.version}</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
