--- a/spark-study/.settings/org.scala-ide.sdt.core.prefs
+++ b/spark-study/.settings/org.scala-ide.sdt.core.prefs
@@ -33,9 +33,9 @@ organizeimports.scalapackage=false
 organizeimports.wildcards=scalaz$scalaz.Scalaz
 recompileOnMacroDef=true
 relationsDebug=false
-scala.compiler.additionalParams=\ -Xsource\:2.10 -Ymacro-expand\:none
-scala.compiler.installation=2.10
-scala.compiler.sourceLevel=2.10
+scala.compiler.additionalParams=\ -Xsource\:2.11 -Ymacro-expand\:none
+scala.compiler.installation=1562231499
+scala.compiler.sourceLevel=2.11
 scala.compiler.useProjectSettings=true
 stopBuildOnError=true
 target=jvm-1.6
